@@ -1,0 +1,10 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<body><html><head><title>Tux Paint "Magic" Tool: Tiles</title>
+<meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
+</head>
+<body bgcolor="#FFFFFF" text="#000000" link="#0000FF" vlink="#FF0000" alink="#FF00FF">
+<h1 align="center">Tux Paint "Magic" Tool: Tiles</h1>
+<h2 align="center">By Pere Pujal i Carabantes &lt;<a href="mailto:pere@fornol.no-ip.org">pere@fornol.no-ip.org</a>&gt;</h2>
+<p>This paint brush draws symmetrically, tiled around the image.</p>
+<p>See also: <a href="kaleidoscope.html">Kaleidoscope</a> <a href="kal_pattern.html">Pattern</a></p>
+</body></html>
