@@ -6,5 +6,5 @@
 <h1 align="center">Tux Paint "Magic" Tool: Kaleidoscope</h1>
 <h2 align="center">By Bill Kendrick &lt;<a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a>&gt;</h2>
 <p>This paint brush draws in four places at the same time, mirroring symmetrically, both horizontally and vertically.  It uses the currently selected color.</p>
-<p>See also: <a href="picasso.html">Picasso</a></p>
+<p>See also: <a href="picasso.html">Picasso</a> <a href="kal_pattern.html">Pattern</a> <a href="kal_tiles.html">Tiles</a></p>
 </body></html>
